<resources>
    <string name="app_name">Ptas Jurl</string>
    <string name="information">Information</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="version">Version</string>


    <string name="fname">First Name *</string>
    <string name="lname">Last Name *</string>
    <string name="home">Home</string>
    <string name="room">Room</string>
    <string name="house">House</string>
    <string name="map">Map</string>
    <string name="add_house">Add</string>
    <string name="location">Location</string>
    <string name="price_dis">Rental Price ($/month)</string>
    <string name="price">Rental Price ($/month).Ex: 30-75$ *</string>
    <string name="electric">Electric (៛/kwm) *</string>
    <string name="water">Water (៛/m3) *</string>
    <string name="parking">Parking (៛/month)</string>
    <string name="electric_dis">Electric (៛/kwm)</string>
    <string name="water_dis">Water (៛/m3)</string>
    <string name="parking_dis">Parking (៛/month)</string>
    <string name="free">Free</string>
    <string name="desc">Description</string>
    <string name="address">Address</string>
    <string name="room_pic">Room Picture *</string>
    <string name="post_by">Post By</string>
    <string name="home_owner">Home Owner</string>
    <string name="other">Other</string>
    <string name="home_owner_phone">Home Owner Phone *</string>
    <string name="home_owner_phone1">Home Owner Phone</string>
    <string name="home_owner_name">Home Owner Name</string>
    <string name="bed_room">Bed Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="upload">Upload</string>
    <string name="room_detail">Room Detail</string>
    <string name="related_item">Related Item</string>
    <string name="search">Search Locations</string>
    <string name="setup_more">Setup more description</string>
    <string name="side">Side (WxH) *</string>
    <string name="Floor">Floor</string>
    <string name="available">Available</string>
    <string name="available_dis">Available</string>Trash
    <string name="amount_people">Amount People</string>
    <string name="trash">Trash</string>Other
    <string name="other_p">Other ($)</string>
    <string name="time">Time Close</string>
    <string name="check">Check List</string>
    <string name="more_desc">More Description</string>
    <string name="notification">Notification</string>
    <string name="term_condition">Term and Condition</string>
    <string name="accept_term">"I have read and accept with this, "</string>
    <string name="tap">Tap to copy text</string>
    <string name="copied">Copied</string>
    <string name="profile">Profile</string>
    <string name="my_house">My House</string>
    <string name="about">About Us</string>
    <string name="language">Language</string>
    <string name="km" translatable="false">ខ្មែរ</string>
    <string name="en" translatable="false">English</string>
    <string name="logout">Logout</string>
    <string name="incorrect_phone">Phone number not existed</string>
    <string name="incorrect_pass">Incorrect Username or Password</string>
    <string name="incorrect_password">Incorrect​Password</string>
    <string name="setting">Setting</string>
    <string name="wrong_code">Wrong code</string>
    <string name="contact">Contact Us</string>
    <string name="donating">Donation</string>
    <string name="no_content">No Content</string>
    <string name="login">Login</string>
    <string name="username">Username *</string>
    <string name="password">Password *</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="not_now">Not Now?</string>
    <string name="create_one">Create one</string>
    <string name="phone">Phone *</string>
    <string name="register">REGISTER</string>
    <string name="six_char">Password must be more then 5 character</string>
    <string name="register_success">Successful</string>
    <string name="user_existed">User Existed</string>
    <string name="viewer">Viewer</string>
    <string name="close">Close Time *</string>
    <string name="size">Size</string>
    <string name="change_pass">Change Password</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="Confirm">Confirm</string>
    <string name="pass_not_match">Password not match</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="code">Code</string>
    <string name="email">Email</string>
    <string name="required_field">Please input all required field</string>
    <string name="room_rent">Room for rent</string>
    <string name="house_rent">House for rent</string>
    <string name="type">Type</string>
    <string name="other_price">Other Prices</string>
    <string name="specification">Specification</string>
    <string name="aircon">Air Conditioner</string>
    <string name="table">Table</string>
    <string name="secu_cam">Security Camera</string>
    <string name="secu_man">Security Man</string>
    <string name="floor">Floor</string>
    <string name="busy">Unavailable</string>
    <string name="server_error">Sever Error</string>
    <string name="title">Title</string>
    <string name="login_required">You need to login to your account before use this feature</string>
    <string name="province">Province *</string>
    <string name="district">District *</string>
    <string name="commune">Commune</string>
    <string name="village">Village</string>
    <string name="width">Width(m)</string>
    <string name="length">Length(m)</string>
    <string name="open_time">Open time</string>
    <string name="accessories">Accessories</string>
    <string name="detail">Detail</string>
    <string name="owner">Owner</string>
    <string name="member">Member</string>
    <string name="update_profile">Do you want update profile?</string>
    <string name="your_approved">Your Approved Posted</string>
    <string name="upload_more_desc">Success...! \nDo you want to upload more description?</string>
    <string name="google_maps_key" translatable="false">AIzaSyCQ-kYIujt0ONGIo2kUsAIoDd-CRuco1f8</string>
</resources>
